--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sweetalert2": "^8.18.6"
   },
   "scripts": {
     "start": "react-scripts start",
